# keepac

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  format.yml  goreleaser.yml  record_and_publish_demos.yml
changelog-cli/: Cargo.toml
changelog-parser/: Cargo.toml
changelog-parser/src/: parse.rs  structs.rs
cmd/: add.go  diff.go  edit.go  find.go  init.go  insert.go  insert_aliases.go  insert_test.go  release.go  root.go  search.go  show.go  yank.go
internal/changelog/: changelog.go  completions.go  finder.go  finder_test.go  formatter.go  formatter_test.go  inserter.go  inserter_test.go  parser.go  parser_test.go  search.go  search_test.go  show.go  yank.go
internal/editor/: editor.go
internal/tui/: choice.go  pager.go
scripts/: generate-completions  record-tapes
src/: cli.rs  finder.rs  main.rs
src/commands/: find.rs  list.rs  mod.rs
src/parse/: markdown.rs  mod.rs  parse.rs  structs.rs
tapes/: .gitignore  dummy.tape
tapes/dark/: demo.tape  find.tape  insert.tape  search.tape  show.tape
tapes/examples/: markdown.md
tapes/partials/: config.tape
vhs/: demo.tape
