[package]
name = "keepac"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "changelog"
path = "src/main.rs"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
